# factorio-server

./: .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
.fly/: secrets.dev.tmp
config/: map-gen-settings.json  server-adminlist.json  server-settings.json  server-whitelist.json
scripts/: destroy_factorio.sh  download_save_file.mjs  launch_factorio.sh  listener.sh  listener2.sh  save_file_manager.py  upload_save_file.mjs
